# mikrus-mcp

./: .afds-baseline.json  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION_NOTES.md  README.md  afds_config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: ci-cd-config.yaml
.github/workflows/: auto-tag.yml  ci.yml  docker-publish.yml  publish.yml  semgrep-scheduled.yml  semgrep.yml
scripts/: afds_config.yaml  docs_validate.py
src/mikrus_mcp/: __init__.py  __main__.py  api.py  client.py  config.py  constants.py  rest_bridge.py  sanitizer.py  server.py  validators.py
src/mikrus_mcp/tools/: capabilities.py  constants.py  container_journal.py  discovery.py  mikrus_api.py  response.py  system.py
tests/: _env_loader.py  conftest.py  fixtures.py  test_client.py  test_config.py  test_import.py  test_multi_server.py  test_server.py
tests/e2e/: conftest.py  test_server_api.py
tests/integration/: conftest.py  mcp_wrapper.py  test_real_tools.py
tests/smoke/: conftest.py  test_connectivity.py  test_critical_tools.py  test_response_format.py
tests/unit/: conftest.py  test_capabilities.py  test_client.py  test_multi_server.py  test_rest_bridge.py  test_sanitizer.py  test_server.py  test_server_tools.py  test_ssh_client.py  test_tool_registration.py  test_validators.py
